# BookingApp

./: .dockerignore  .env  .env.dist  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  Dockerfile  Dockerfile.prod  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: booking-app-ci.yml  booking_app_ci.yml  deploy.yml  lint.yml  test.yml
booking_app/: .env  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  manage.py  requirements.txt  todo.md
booking_app/booking_app/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
booking_app/booking_app/templates/: index.html  office.html  reserve.html  sign-in.html
booking_app/core/: celery.py  env.py  settings.py  urls.py
booking_app/notification/: models.py  utils.py
booking_app/notification/migrations/: 0001_initial.py
booking_app/reservation/: models.py  static.py
booking_app/reservations/: admin.py  apps.py  tests.py  urls.py  views.py
booking_app/reservations/API/: routers.py  serializers.py  urls.py  views.py
booking_app/reservations/forms/: __init__.py  date_form.py  reservation.py
booking_app/reservations/management/: commands.py
booking_app/reservations/migrations/: 0001_initial.py  0002_alter_desk_name_alter_desk_number_alter_desk_status_and_more.py  0002_alter_desk_reservation.py  0002_alter_desk_status_alter_parking_status_and_more.py  0003_alter_desk_reservation.py  0003_alter_reservation_person_alter_reservation_room_and_more.py  0004_alter_desk_number.py  0004_remove_desk_reservation_remove_parking_reservation_and_more.py  0005_alter_reservation_parking_alter_reservation_room.py  0005_reservation_unique_desk_reservation_per_period_and_more.py  0006_alter_reservation_parking_alter_reservation_room.py  0007_auto_20230329_1928.py  0008_alter_desk_status_alter_parking_status_and_more.py  0009_remove_parking_floor.py  0010_alter_reservation_person_and_more.py  0011_room_type.py  0012_alter_room_type.py  0014_alter_parking_number.py
booking_app/reservations/models/: __init__.py  (+3 more)
booking_app/static/: gulpfile.js
booking_app/users/: admin.py  factories.py  forms.py  managers.py  models.py  tasks.py  tests.py  urls.py  views.py
nginx/conf.d/: app.conf
(+83 files in other folders)
