[tool.poetry]
name = "bookingapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
bootstrap4 = "^0.1.0"
icecream = "^2.1.3"
pillow="^10.3.0"
django-axes = "^6.5.1"
coverage = "^7.6.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
factory-boy = "^3.3.1"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
ruff = "^0.4.3"
safety = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.bandit]
exclude_dirs = ["tests"]
